// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JavaScriptGenerator should not render \`class\` with reserved keyword 1`] = `
"class Address {
  ReservedEnum;
  reserved_ReservedEnum;

  constructor(input) {
    this.ReservedEnum = input.ReservedEnum;
    this.reserved_ReservedEnum = input.reserved_ReservedEnum;
  }

  get ReservedEnum() { return this.ReservedEnum; }
  set ReservedEnum(ReservedEnum) { this.ReservedEnum = ReservedEnum; }

  get reserved_ReservedEnum() { return this.reserved_ReservedEnum; }
  set reserved_ReservedEnum(reserved_ReservedEnum) { this.reserved_ReservedEnum = reserved_ReservedEnum; }
}"
`;

exports[`JavaScriptGenerator should render \`class\` type 1`] = `
"class Address {
  StreetName;
  City;
  State;
  HouseNumber;
  Marriage;
  Members;
  ArrayType;
  AdditionalProperties;

  constructor(input) {
    this.StreetName = input.StreetName;
    this.City = input.City;
    this.State = input.State;
    this.HouseNumber = input.HouseNumber;
    if (input.hasOwnProperty('Marriage')) {
      this.Marriage = input.Marriage;
    }
    if (input.hasOwnProperty('Members')) {
      this.Members = input.Members;
    }
    this.ArrayType = input.ArrayType;
    if (input.hasOwnProperty('AdditionalProperties')) {
      this.AdditionalProperties = input.AdditionalProperties;
    }
  }

  get StreetName() { return this.StreetName; }
  set StreetName(StreetName) { this.StreetName = StreetName; }

  get City() { return this.City; }
  set City(City) { this.City = City; }

  get State() { return this.State; }
  set State(State) { this.State = State; }

  get HouseNumber() { return this.HouseNumber; }
  set HouseNumber(HouseNumber) { this.HouseNumber = HouseNumber; }

  get Marriage() { return this.Marriage; }
  set Marriage(Marriage) { this.Marriage = Marriage; }

  get Members() { return this.Members; }
  set Members(Members) { this.Members = Members; }

  get ArrayType() { return this.ArrayType; }
  set ArrayType(ArrayType) { this.ArrayType = ArrayType; }

  get AdditionalProperties() { return this.AdditionalProperties; }
  set AdditionalProperties(AdditionalProperties) { this.AdditionalProperties = AdditionalProperties; }
}"
`;

exports[`JavaScriptGenerator should render models and their dependencies for CJS module system 1`] = `
"const OtherModel = require('./OtherModel');

class Address {
  streetName;
  city;
  state;
  houseNumber;
  marriage;
  members;
  arrayType;
  otherModel;
  additionalProperties;
  sTestPatternProperties;

  constructor(input) {
    this.streetName = input.streetName;
    this.city = input.city;
    this.state = input.state;
    this.houseNumber = input.houseNumber;
    if (input.hasOwnProperty('marriage')) {
      this.marriage = input.marriage;
    }
    if (input.hasOwnProperty('members')) {
      this.members = input.members;
    }
    this.arrayType = input.arrayType;
    if (input.hasOwnProperty('otherModel')) {
      this.otherModel = input.otherModel;
    }
  }

  get streetName() { return this.streetName; }
  set streetName(streetName) { this.streetName = streetName; }

  get city() { return this.city; }
  set city(city) { this.city = city; }

  get state() { return this.state; }
  set state(state) { this.state = state; }

  get houseNumber() { return this.houseNumber; }
  set houseNumber(houseNumber) { this.houseNumber = houseNumber; }

  get marriage() { return this.marriage; }
  set marriage(marriage) { this.marriage = marriage; }

  get members() { return this.members; }
  set members(members) { this.members = members; }

  get arrayType() { return this.arrayType; }
  set arrayType(arrayType) { this.arrayType = arrayType; }

  get otherModel() { return this.otherModel; }
  set otherModel(otherModel) { this.otherModel = otherModel; }

  get additionalProperties() { return this.additionalProperties; }
  set additionalProperties(additionalProperties) { this.additionalProperties = additionalProperties; }

  get sTestPatternProperties() { return this.sTestPatternProperties; }
  set sTestPatternProperties(sTestPatternProperties) { this.sTestPatternProperties = sTestPatternProperties; }
}
module.exports = Address;"
`;

exports[`JavaScriptGenerator should render models and their dependencies for CJS module system 2`] = `
"

class OtherModel {
  streetName;
  additionalProperties;

  constructor(input) {
    this.streetName = input.streetName;
  }

  get streetName() { return this.streetName; }
  set streetName(streetName) { this.streetName = streetName; }

  get additionalProperties() { return this.additionalProperties; }
  set additionalProperties(additionalProperties) { this.additionalProperties = additionalProperties; }
}
module.exports = OtherModel;"
`;

exports[`JavaScriptGenerator should render models and their dependencies for ESM module system 1`] = `
"import OtherModel from './OtherModel';

class Address {
  streetName;
  city;
  state;
  houseNumber;
  marriage;
  members;
  arrayType;
  otherModel;
  additionalProperties;
  sTestPatternProperties;

  constructor(input) {
    this.streetName = input.streetName;
    this.city = input.city;
    this.state = input.state;
    this.houseNumber = input.houseNumber;
    if (input.hasOwnProperty('marriage')) {
      this.marriage = input.marriage;
    }
    if (input.hasOwnProperty('members')) {
      this.members = input.members;
    }
    this.arrayType = input.arrayType;
    if (input.hasOwnProperty('otherModel')) {
      this.otherModel = input.otherModel;
    }
  }

  get streetName() { return this.streetName; }
  set streetName(streetName) { this.streetName = streetName; }

  get city() { return this.city; }
  set city(city) { this.city = city; }

  get state() { return this.state; }
  set state(state) { this.state = state; }

  get houseNumber() { return this.houseNumber; }
  set houseNumber(houseNumber) { this.houseNumber = houseNumber; }

  get marriage() { return this.marriage; }
  set marriage(marriage) { this.marriage = marriage; }

  get members() { return this.members; }
  set members(members) { this.members = members; }

  get arrayType() { return this.arrayType; }
  set arrayType(arrayType) { this.arrayType = arrayType; }

  get otherModel() { return this.otherModel; }
  set otherModel(otherModel) { this.otherModel = otherModel; }

  get additionalProperties() { return this.additionalProperties; }
  set additionalProperties(additionalProperties) { this.additionalProperties = additionalProperties; }

  get sTestPatternProperties() { return this.sTestPatternProperties; }
  set sTestPatternProperties(sTestPatternProperties) { this.sTestPatternProperties = sTestPatternProperties; }
}
export default Address;
"
`;

exports[`JavaScriptGenerator should render models and their dependencies for ESM module system 2`] = `
"

class OtherModel {
  streetName;
  additionalProperties;

  constructor(input) {
    this.streetName = input.streetName;
  }

  get streetName() { return this.streetName; }
  set streetName(streetName) { this.streetName = streetName; }

  get additionalProperties() { return this.additionalProperties; }
  set additionalProperties(additionalProperties) { this.additionalProperties = additionalProperties; }
}
export default OtherModel;
"
`;

exports[`JavaScriptGenerator should work custom preset for \`class\` type 1`] = `
"export class CustomClass {
  #Property;

  constructor(input) {
    this.#property = input.property;
  }

  get property() { return this.#property; }
  set property(property) { this.#property = property; }
}"
`;
